Big save : Setting name convention for the modules functions

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -54,7 +54,7 @@ __BU_MAIN_PROJECT_LOG_FILE_PARENT="$__BU_MAIN_PROJECT_LOG_DIR_PATH"
 __BU_MAIN_PROJECT_LOG_FILE_NAME="$__BU_MAIN_PROJECT_NAME.log"                                     # Default --> "$__BU_MAIN_PROJECT_NAME.log"
 __BU_MAIN_PROJECT_LOG_FILE_PATH="$__BU_MAIN_PROJECT_LOG_FILE_PARENT/$__BU_MAIN_PROJECT_LOG_FILE_NAME"  # Default --> "$__BU_MAIN_PROJECT_LOG_DIR_PATH/$__BU_MAIN_PROJECT_LOG_FILE_NAME"
 
-# Defining the project's "Echo<...>()" functions debug output (to have a better view during a "bash - x" debug).
+# Defining the project's "BU::Echo<...>()" functions debug output (to have a better view during a "bash - x" debug).
 __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT="$__BU_MAIN_PROJECT_LOG_DIR_PATH"
 __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME="echo_output.log"
 __BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH="$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT/$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME"
