--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -25,7 +25,7 @@ __BU_MAIN_STAT_DEBUG="true"
 __BU_MAIN_STAT_DECHO="forbid"
 
 
-# "CheckProjectLogPath()" function's authorization to call an "Echo<...>()" function in case of need.
+# "CheckProjectLogPath()" function's authorization to call an "BU::Echo<...>()" function in case of need.
 
 # This variable only accepts "true" or "false" as values.
 # Default value : "true" (to avoid bugs and infinite loops during the initialization processus)
@@ -68,7 +68,7 @@ __BU_MAIN_STAT_LOG_REDIRECT=""
 # Project's authorization to operate at the root directory or one of its sub-folders
 
 # This variable only accepts "authorized", "forbidden" or "restricted" as values.
-# Default value : "forbidden" (by security, and since there's no need to change its value during the initialization, you have to change this value manually or in your code with the "ChangeSTAT_OPERATE_ROOT()" function).
+# Default value : "forbidden" (by security, and since there's no need to change its value during the initialization, you have to change this value manually or in your code with the "BU::Main:Status::ChangeSTAT_OPERATE_ROOT()" function).
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 
