--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -20,12 +20,12 @@ function CheckTextColor()
 	# $1 --> Color code
 
 	#**** Code ****
-	if CheckTextFormat; then
+	if BU::Main::Status::CheckTextFormat; then
         if command -v tput &> /dev/null; then
             tput setaf "$1" || { echo -ne "\e[38;5;$1m" && return 0; }
                 
 #            if ! CheckProjectRelatedFile "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT" "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME" "f"; then
- #               HandleSmallErrors 'E' "Unable to create the $(Decho "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH") file" 'E' 'CPLS'
+ #               HandleSmallErrors 'E' "Unable to create the $(BU::Decho "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH") file" 'E' 'CPLS'
   #          fi
             
             echo "$1" > "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH";
