--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -43,34 +43,34 @@ __BU_MAIN_TXT_STORE_ERROR_MESSAGES_ARRAY=()
 ## TEXT FORMATTING
 
 # Blink
-__BU_MAIN_TXT_FMT_BLINK="$(CheckTextFormat 'blink' '5')"
-__BU_MAIN_TXT_FMT_BLINK_RESET="$(CheckTextFormat 'sgr0' '25')"
+__BU_MAIN_TXT_FMT_BLINK="$(BU::Main::Status::CheckTextFormat 'blink' '5')"
+__BU_MAIN_TXT_FMT_BLINK_RESET="$(BU::Main::Status::CheckTextFormat 'sgr0' '25')"
 
 # Bold
-__BU_MAIN_TXT_FMT_BOLD="$(CheckTextFormat 'bold' '1')"
-__BU_MAIN_TXT_FMT_BOLD_RESET="$(CheckTextFormat 'rmso' '21')"
+__BU_MAIN_TXT_FMT_BOLD="$(BU::Main::Status::CheckTextFormat 'bold' '1')"
+__BU_MAIN_TXT_FMT_BOLD_RESET="$(BU::Main::Status::CheckTextFormat 'rmso' '21')"
 
 # Dim
-__BU_MAIN_TXT_FMT_DIM="$(CheckTextFormat 'dim' '2')"
-__BU_MAIN_TXT_FMT_DIM_RESET="$(CheckTextFormat '' '22')"
+__BU_MAIN_TXT_FMT_DIM="$(BU::Main::Status::CheckTextFormat 'dim' '2')"
+__BU_MAIN_TXT_FMT_DIM_RESET="$(BU::Main::Status::CheckTextFormat '' '22')"
 
 # Hidden (useful for password typing).
-__BU_MAIN_TXT_FMT_HIDDEN="$(CheckTextFormat '' '8')"
-__BU_MAIN_TXT_FMT_HIDDEN_RESET="$(CheckTextFormat '' '28')"
+__BU_MAIN_TXT_FMT_HIDDEN="$(BU::Main::Status::CheckTextFormat '' '8')"
+__BU_MAIN_TXT_FMT_HIDDEN_RESET="$(BU::Main::Status::CheckTextFormat '' '28')"
 
 # Italic
-__BU_MAIN_TXT_FMT_ITALIC="$(CheckTextFormat 'sitm' '3')"
-__BU_MAIN_TXT_FMT_ITALIC_RESET="$(CheckTextFormat 'ritm' '23')"
+__BU_MAIN_TXT_FMT_ITALIC="$(BU::Main::Status::CheckTextFormat 'sitm' '3')"
+__BU_MAIN_TXT_FMT_ITALIC_RESET="$(BU::Main::Status::CheckTextFormat 'ritm' '23')"
 
 # Reset
-__BU_MAIN_TXT_FMT_RESET="$(CheckTextFormat 'sgr0' '0')"
+__BU_MAIN_TXT_FMT_RESET="$(BU::Main::Status::CheckTextFormat 'sgr0' '0')"
 
 # Strikethrough
-__BU_MAIN_TXT_FMT_STRIKETHROUGH="$(CheckTextFormat '' '9')"
-__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(CheckTextFormat '' '29')"
+__BU_MAIN_TXT_FMT_STRIKETHROUGH="$(BU::Main::Status::CheckTextFormat '' '9')"
+__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(BU::Main::Status::CheckTextFormat '' '29')"
 
 # Underline
-__BU_MAIN_TXT_FMT_UNDERLINE="$(CheckTextFormat 'smul' '4')"
-__BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(CheckTextFormat 'rmul' '24')"
+__BU_MAIN_TXT_FMT_UNDERLINE="$(BU::Main::Status::CheckTextFormat 'smul' '4')"
+__BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(BU::Main::Status::CheckTextFormat 'rmul' '24')"
 
 # -----------------------------------------------
