Restored the "$__BU_MAIN_STAT_TXT_FMT" global status variable

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -97,12 +97,12 @@ __BU_MAIN_STAT_TIME_TXT=".5"
 __BU_MAIN_STAT_TRANSLATED="false"
 
 
-# Project's handling text formatting
+# Project's text formatting handling (the "BU::Decho<...>()" functions can format the text or not).
 
 # This variable only accepts "true" or "false" as value.
-# Default value : "true"
+# Default value : "true" (formatting accepted)
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_TXT_FMT="false"
+__BU_MAIN_STAT_TXT_FMT="true"
 
 
 # User's operating system (getting user's OS is important for OS-dependent processings, like package management)
