Ended the renaming of the functions, to fit with the modules architecture

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -17,7 +17,7 @@
 __BU_MAIN_STAT_DEBUG="true"
 
 
-# "CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
+# "BU::Main::Checkings::CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
 
 # This variable only accepts "authorize", "forbid" or "restrict" as values.
 # Default value : "forbid" (to avoid bugs during the program's initialization)
@@ -25,7 +25,7 @@ __BU_MAIN_STAT_DEBUG="true"
 __BU_MAIN_STAT_DECHO="forbid"
 
 
-# "CheckProjectLogPath()" function's authorization to call an "BU::Echo<...>()" function in case of need.
+# "BU::Main::Checkings::CheckProjectLogPath()" function's authorization to call an "BU::Echo<...>()" function in case of need.
 
 # This variable only accepts "true" or "false" as values.
 # Default value : "true" (to avoid bugs and infinite loops during the initialization processus)
