--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -33,7 +33,7 @@ __BU_MAIN_TXT_PRINT_TAB=">>>>"
 
 ## STORING TEXT
 
-# Storing a string got from a specific line (with a function like "GetLineFromTextFile()", from "main/Files.lib" source file).
+# Storing a string got from a specific line (with a function like "BU::Main::Files::GetLineFromTextFile()", from "main/Files.lib" source file).
 __BU_MAIN_TXT_STORE_LINE=""
 
 __BU_MAIN_TXT_STORE_ERROR_MESSAGES_ARRAY=()
