Re-adding the 'module' argument value's support

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -17,7 +17,7 @@ function GetProjectFilePath()
 {
     local v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}"
     local find_path
-        find_path="$(ModuleInitializer_FindPath "$(cd ..; pwd)" "$v_cut")"
+        find_path="$(ModuleInit_FindPath "$(cd ..; pwd)" "$v_cut")"
 
     echo "$find_path"
 
