Adding a new global status variable for the headers messages

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -13,6 +13,7 @@
 
 # This variable only accepts "true" or "false" as values.
 # Default value : "false"
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_DEBUG="true"
 
@@ -21,6 +22,7 @@ __BU_MAIN_STAT_DEBUG="true"
 
 # This variable only accepts "authorize", "forbid" or "restrict" as values.
 # Default value : "forbid" (to avoid bugs during the program's initialization)
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_DECHO="forbid"
 
@@ -29,6 +31,7 @@ __BU_MAIN_STAT_DECHO="forbid"
 
 # This variable only accepts "true" or "false" as values.
 # Default value : "true" (to avoid bugs and infinite loops during the initialization processus)
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_ECHO="true"
 
@@ -37,6 +40,7 @@ __BU_MAIN_STAT_ECHO="true"
 
 # This variable only accepts "fatal" or nothing as value.
 # Default value : "fatal" (to avoid leaving bugs during the program's initialization)
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_ERROR="fatal"
 
@@ -45,6 +49,7 @@ __BU_MAIN_STAT_ERROR="fatal"
 
 # This variable only accepts "true" or "false" as values.
 # Default value : "true" (DON'T change thsi value here, since the project MUST be initialized first).
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_INITIALIZING="true"
 
@@ -53,22 +58,25 @@ __BU_MAIN_STAT_INITIALIZING="true"
 
 # This variable only accepts "true" or "false" as values.
 # Default value : "true"
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_LOG="true"
 
 
-# Project's main log file redirections status
+# Project's main log file redirections status.
 
 # This variable only accepts "log", "tee" or nothing as value.
 # Default value : "" (no value)
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_LOG_REDIRECT=""
 
 
-# Project's authorization to operate at the root directory or one of its sub-folders
+# Project's authorization to operate at the root directory or one of its sub-folders.
 
 # This variable only accepts "authorized", "forbidden" or "restricted" as values.
 # Default value : "forbidden" (by security, and since there's no need to change its value during the initialization, you have to change this value manually or in your code with the "BU::Main:Status::ChangeSTAT_OPERATE_ROOT()" function).
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 
@@ -77,22 +85,34 @@ __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 
 # This variable only accepts "true" or "false" as values.
 # Default value : "false"
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_PRINT_INIT_LOG="true"
 
 
-# Project's messages display time
+# Project's headers messages display time.
 
 # This variable only accepts any integer of floating number.
-# Default value : ".5"
+# Default value : ".6"
+
 # shellcheck disable=SC2034
-__BU_MAIN_STAT_TIME_TXT=".5"
+__BU_MAIN_STAT_TIME_HEADER=".6"
+
+
+# Project's text messages display time.
+
+# This variable only accepts any integer of floating number.
+# Default value : ".4"
+
+# shellcheck disable=SC2034
+__BU_MAIN_STAT_TIME_TXT=".4"
 
 
 # Project's translation checker.
 
 # This variable only accepts "true" or "false" as value.
 # Default value : "false" (since the whole project's texts are not yet translated)
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_TRANSLATED="false"
 
@@ -101,6 +121,7 @@ __BU_MAIN_STAT_TRANSLATED="false"
 
 # This variable only accepts "true" or "false" as value.
 # Default value : "true" (formatting accepted)
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_TXT_FMT="true"
 
@@ -109,5 +130,6 @@ __BU_MAIN_STAT_TXT_FMT="true"
 
 # This variable will be completed with the "CheckSupportedOSType" function.
 # Default value : "" (no value)
+
 # shellcheck disable=SC2034
 __BU_MAIN_STAT_USER_OS=""
