Added new colors : salmon, tan and violet

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -78,7 +78,10 @@ __BU_MAIN_COLOR_CODE_WHITE='15'
 __BU_MAIN_COLOR_CODE_CYAN='51'
 __BU_MAIN_COLOR_CODE_ORANGE='166'
 __BU_MAIN_COLOR_CODE_PINK='200'
+__BU_MAIN_COLOR_CODE_SALMON='209'
+__BU_MAIN_COLOR_CODE_TAN='180'
 __BU_MAIN_COLOR_CODE_TURQUOISE='51'
+__BU_MAIN_COLOR_CODE_VIOLET='177'
 
 # -----------------------------------------------
 
@@ -127,12 +130,16 @@ __BU_MAIN_COLOR_PINK="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_PINK")"      # P
 __BU_MAIN_COLOR_PURPLE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_PURPLE")"	# Purple
 __BU_MAIN_COLOR_RED="$(CheckTextColor 		"$__BU_MAIN_COLOR_CODE_RED")"	 	# Light red
 
+__BU_MAIN_COLOR_SALMON="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_SALMON")"	# Salmon
 __BU_MAIN_COLOR_SILVER="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_SILVER")"	# Silver
+__BU_MAIN_COLOR_TAN="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_TAN")"		# Tan
+
 __BU_MAIN_COLOR_TEAL="$(CheckTextColor		"$__BU_MAIN_COLOR_CODE_TEAL")"		# Teal
 __BU_MAIN_COLOR_TURQUOISE="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_TURQUOISE")"	# Turquoise
-
 __BU_MAIN_COLOR_WHITE="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_WHITE")"     # White
+
 __BU_MAIN_COLOR_YELLOW="$(CheckTextColor 	"$__BU_MAIN_COLOR_CODE_YELLOW")"	# Light yellow
+__BU_MAIN_COLOR_VIOLET="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_VIOLET")"	# Violet
 
 
 # Specific colors encoding.
