Added a new global status variable for the libe breaks pause time : __BU_MAIN_STAT_TIME_NEWLINE

--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -90,7 +90,7 @@ __BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 __BU_MAIN_STAT_PRINT_INIT_LOG="true"
 
 
-# Project's headers messages display time.
+# Project's headers messages display pause time.
 
 # This variable only accepts any integer of floating number.
 # Default value : ".6"
@@ -99,7 +99,15 @@ __BU_MAIN_STAT_PRINT_INIT_LOG="true"
 __BU_MAIN_STAT_TIME_HEADER=".6"
 
 
-# Project's text messages display time.
+# Project's newlines pause time.
+
+# This variable only accepts any integer of floating number.
+# Default value ".2"
+
+__BU_MAIN_STAT_TIME_NEWLINE=".2"
+
+
+# Project's text messages display pause time.
 
 # This variable only accepts any integer of floating number.
 # Default value : ".4"
