Trying to fix the script's name displaying

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -17,7 +17,10 @@ function GetProjectFilePath()
 {
     local v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}"
     local find_path
-        find_path="$(ModuleInit_FindPath "$(cd ..; pwd)" "$v_cut")"
+        find_path="$(ModuleInit_FindPath "$(cd "$(printf "%s" "$__BU_MAIN_PROJECT_FILE_PATH")" ||
+        { 
+            echo >&2; echo "IN « ${BASH_SOURCE[0]} », FUNCTION « ${FUNCNAME[0]} », LINE « $LINENO » --> ERROR : UNABLE TO GET THE " >&2; echo >&2; exit 1;
+        }; pwd)" "$v_cut")"
 
     echo "$find_path"
 
@@ -42,8 +45,8 @@ else
     __BU_MAIN_PROJECT_TMP_DIR_PATH="$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME"        # Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME"
 fi
 
-# 
-__BU_MAIN_PROJECT_FILE_PATH="$(GetProjectFilePath)"
+# Project's file path.
+__BU_MAIN_PROJECT_FILE_PATH="$(GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME")"; echo "$__BU_MAIN_PROJECT_FILE_PATH"
 
 # Defining the project's log file's path.
 __BU_MAIN_PROJECT_LOG_DIR_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH"
