--- a/install/.Bash-utils/config/modules/main/time.conf
+++ b/install/.Bash-utils/config/modules/main/time.conf
@@ -14,13 +14,19 @@
 #### 
 
 ## GETTING THE DATE
+
 # Saving the current date in YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second)
-__BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %Hh-%Mm-%Ss")"
+__BU_MAIN_TIME_DATE="$(date +"%Y-%m-%d %Hh:%Mm:%Ss")"
 
 # -----------------------------------------------
 
 ## PRINTING THE DATE
+
 # Displaying the current date YYYYY-MM-DD hh-mm-ss format (YEAR-MONTH-DAY hour-minute-second) with a colored text (for a better view in the log file).
+
+# Unlike the "$__BU_MODULES_UNIT_DATE_LOG" global variable, this log entry displays colors.
+
+# Declaring the variables which contains the color codes.
 v_time_conf_date_display_color_1="78"
 v_time_conf_date_display_color_2="111"
 v_time_conf_date_display_color_3="78"
