--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -41,6 +41,8 @@ if [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; t
 
 		echo "Aborting the library's initialization." >&2; echo >&2
 
+		ModuleInit_AskPrintLog
+
 		exit 1
 	fi
 
@@ -52,6 +54,8 @@ elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -s "$__BU_MAIN_R
 	echo "Please write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2
 
 	echo "Aborting the library's initialization." >&2; echo >&2
+
+	ModuleInit_AskPrintLog
 
 	exit 1
 
@@ -67,6 +71,8 @@ elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MODULE
 
     echo "Aborting the installation" >&2; echo >&2
 
+	ModuleInit_AskPrintLog
+
     exit 1
 
 # Handling the absence of the "Bash-utils-root-val.path" file.
@@ -78,7 +84,7 @@ elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
 
 	echo "Aborting the library's initialization." >&2; echo >&2
 
-	ModuleInit_PrintLog
+	ModuleInit_AskPrintLog
 
 	exit 1
 fi
