Added the BU::ModuleInit::PrintLogError() function

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -17,7 +17,7 @@ function GetProjectFilePath()
 {
     local v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}"
     local find_path
-        find_path="$(ModuleInit_FindPath "$(cd "$(printf "%s" "$__BU_MAIN_PROJECT_FILE_PATH")" ||
+        find_path="$(BU::ModuleInit::FindPath "$(cd "$(printf "%s" "$__BU_MAIN_PROJECT_FILE_PATH")" ||
         { 
             echo >&2; echo "IN « ${BASH_SOURCE[0]} », FUNCTION « ${FUNCNAME[0]} », LINE « $LINENO » --> ERROR : UNABLE TO GET THE " >&2; echo >&2; exit 1;
         }; pwd)" "$v_cut")"
