Reorganized the 'module --*' and 'main' first arguments processing

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -27,7 +27,7 @@ elif [ -f "$__BU_MODULES_UTILS_LIB_ROOT_DIR_ROOT_FILE_PATH" ]; then
 fi
 
 # Checking if the "Bash-utils-root-val.path" file exists AND if this file contains a string (the wanted string here is the library's root folder path).
-if [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; then
+if [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
 	__BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH")"
 
 	# Checking if the library's root folder path written in this file is valid.
@@ -39,7 +39,7 @@ if [ -f "$__BU_MAIN_ROOT_DIR_PATH__" ] && [ -s "$__BU_MAIN_ROOT_DIR_PATH__" ]; t
 
 		echo "Please check the path recorded in this file for typos if you typed it by yourself, or verify where you've stored this root folder." >&2; echo >&2
 
-		echo "Aborting the library's initialization." >&2; echo >&2
+		BU::ModuleInit::AbortMsg
 
 		BU::ModuleInit::AskPrintLog
 
@@ -53,7 +53,7 @@ elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -s "$__BU_MAIN_R
 	echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » exists, but is empty." >&2; echo >&2
 	echo "Please write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2
 
-	echo "Aborting the library's initialization." >&2; echo >&2
+	BU::ModuleInit::AbortMsg
 
 	BU::ModuleInit::AskPrintLog
 
@@ -69,7 +69,7 @@ elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MODULE
     echo "Please execute this script as root user, or change the ownership of the « $__BU_MAIN_ROOT_DIR_PATH » file, or create a new file, and rename the file to find in the « $__BU_MODULE_UTILS_INITALIZER_PATH » file"
     echo "If you opt for the last solution, please find the line containing the string « __BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_NAME= » in the « DEFINING GLOBAL VARIABLES » subsection"; echo >&2
 
-    echo "Aborting the installation" >&2; echo >&2
+    BU::ModuleInit::AbortMsg
 
 	BU::ModuleInit::AskPrintLog
 
@@ -82,7 +82,7 @@ elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
 	echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » doesn't exists" >&2; echo >&2
 	echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2
 
-	echo "Aborting the library's initialization." >&2; echo >&2
+	BU::ModuleInit::AbortMsg
 
 	BU::ModuleInit::AskPrintLog
 
@@ -97,7 +97,7 @@ __BU_MAIN_MODULE_LIB_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_P
 __BU_MAIN_MODULE_RES_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "res")"				# Bash Utils resources directory            |   Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 
 # Bash Utils dev-tools paths.
-__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_RES_DIR_PATH" "dev-tools")"			# Bash Utils development tools root directory          	|	Default parent folder --> "$__BU_MAIN_MODULE_RES_DIR_PATH/"
+__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_RES_DIR_PATH" "dev-tools")"              # Bash Utils development tools root directory          	|	Default parent folder --> "$__BU_MAIN_MODULE_RES_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_BIN="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-bin")"				# Bash Utils development tools binary files folder		|	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_DSK="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-desktop")"			# Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_IMG="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-img")"				# Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
