--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -39,7 +39,7 @@ if [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ -s "$__BU_MAIN_ROOT_
 
 		echo "Please check the path recorded in this file for typos if you typed it by yourself, or verify where you've stored this root folder." >&2; echo >&2
 
-		BU::ModuleInit::AbortMsg
+		BU::ModuleInit::MsgAbort
 
 		BU::ModuleInit::AskPrintLog
 
@@ -53,7 +53,7 @@ elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -s "$__BU_MAIN_R
 	echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » exists, but is empty." >&2; echo >&2
 	echo "Please write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2
 
-	BU::ModuleInit::AbortMsg
+	BU::ModuleInit::MsgAbort
 
 	BU::ModuleInit::AskPrintLog
 
@@ -69,7 +69,7 @@ elif [ -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ] && [ ! -r "$__BU_MODULE
     echo "Please execute this script as root user, or change the ownership of the « $__BU_MAIN_ROOT_DIR_PATH » file, or create a new file, and rename the file to find in the « $__BU_MODULE_UTILS_INITALIZER_PATH » file"
     echo "If you opt for the last solution, please find the line containing the string « __BU_MODULES_UTILS_LIB_ROOT_DIR_FILE_NAME= » in the « DEFINING GLOBAL VARIABLES » subsection"; echo >&2
 
-    BU::ModuleInit::AbortMsg
+    BU::ModuleInit::MsgAbort
 
 	BU::ModuleInit::AskPrintLog
 
@@ -82,7 +82,7 @@ elif [ ! -f "$__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH" ]; then
 	echo "The Bash Utils's root folder's path storage file « $__BU_MAIN_ROOT_DIR_PATH » doesn't exists" >&2; echo >&2
 	echo "Please create this file and write the path of the library's root folder inside this file, manually or with the installer file." >&2; echo >&2
 
-	BU::ModuleInit::AbortMsg
+	BU::ModuleInit::MsgAbort
 
 	BU::ModuleInit::AskPrintLog
 
