Added the $p_var_type parameter to the BU::ModuleInit::DisplayInitGlobalVarsInfos() function

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -101,23 +101,23 @@ fi
 
 # Bash Utils binary files folder            |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_BIN_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "bin")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_BIN_DIR_PATH" "$__BU_MAIN_MODULE_BIN_DIR_PATH" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_BIN_DIR_PATH" "$__BU_MAIN_MODULE_BIN_DIR_PATH" 'Path' "This global variable stores the path of the ";
 
 # Bash Utils configuration files folder		|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_CONF_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MODULE_UTILS_CONFIG_MODULES_DIR" "$(BU::ModuleInit::GetModuleName "${BASH_SOURCE[0]}")")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_DIR_PATH" "$__BU_MAIN_MODULE_CONF_DIR_PATH" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_DIR_PATH" "$__BU_MAIN_MODULE_CONF_DIR_PATH" 'Path' "This global variable stores the path of the ";
 
 # Bash Utils documentation folder			|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DOCS_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "docs")";	
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DOCS_DIR_PATH" "$__BU_MAIN_MODULE_DOCS_DIR_PATH" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DOCS_DIR_PATH" "$__BU_MAIN_MODULE_DOCS_DIR_PATH" 'Path' "This global variable stores the path of the ";
 
 # Bash Utils library root directory	        |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_LIB_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "lib")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_LIB_DIR_PATH" "$__BU_MAIN_MODULE_LIB_DIR_PATH" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_LIB_DIR_PATH" "$__BU_MAIN_MODULE_LIB_DIR_PATH" 'Path' "This global variable stores the path of the ";
 
 # Bash Utils library resources path			|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_RES_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "res")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_RES_DIR_PATH" "$__BU_MAIN_MODULE_RES_DIR_PATH" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_RES_DIR_PATH" "$__BU_MAIN_MODULE_RES_DIR_PATH" 'Path' "This global variable stores the path of the ";
 
 # -----------------------------------------------
 
@@ -125,27 +125,27 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_RES_DIR_PATH" "$__B
 
 # Bash Utils development tools root directory          	|	Default parent folder --> "$__BU_MAIN_MODULE_RES_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_RES_DIR_PATH" "dev-tools")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" 'Path' "This global variable stores the path of the ";
 
 # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_BIN="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-bin")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_BIN" "$__BU_MAIN_MODULE_DEVTOOLS_BIN" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_BIN" "$__BU_MAIN_MODULE_DEVTOOLS_BIN" 'Path' "This global variable stores the path of the ";
 
 # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_DSK="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-desktop")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_DSK" "$__BU_MAIN_MODULE_DEVTOOLS_DSK" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_DSK" "$__BU_MAIN_MODULE_DEVTOOLS_DSK" 'Path' "This global variable stores the path of the ";
 
 # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_IMG="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-img")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_IMG" "$__BU_MAIN_MODULE_DEVTOOLS_IMG" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_IMG" "$__BU_MAIN_MODULE_DEVTOOLS_IMG" 'Path' "This global variable stores the path of the ";
 
 # Bash Utils development tools source files             |	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_SRC="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-src")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_SRC" "$__BU_MAIN_MODULE_DEVTOOLS_SRC" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_SRC" "$__BU_MAIN_MODULE_DEVTOOLS_SRC" 'Path' "This global variable stores the path of the ";
 
 # Bash Utils development tools translation files folder |	Default parent folder --> "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DEVTOOLS_TRANSL="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_DEVTOOLS_ROOT_DIR_PATH" "dev-translations")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_TRANSL" "$__BU_MAIN_MODULE_DEVTOOLS_TRANSL" "This global variable stores the path of the ";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_DEVTOOLS_TRANSL" "$__BU_MAIN_MODULE_DEVTOOLS_TRANSL" 'Path' "This global variable stores the path of the ";
 
 # -----------------------------------------------
 
@@ -166,23 +166,23 @@ __BU_MAIN_MODULE_LIB_LANG_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODUL
 
 # Bash Utils color encoding variables configuration file.
 __BU_MAIN_MODULE_CONF_COLORS_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Colors.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH" "$__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH" "This global variable stores the path of the « Colors.conf » configuration file";
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH" "$__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Colors.conf » configuration file";
 
 # Project's initialization variables.
 __BU_MAIN_MODULE_CONF_INIT_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Project.conf")"
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" "$__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" "This global variable stores the path of the "
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" "$__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Project.conf » configuration file";
 
 # Bash Utils status variables configuration file.
 __BU_MAIN_MODULE_CONF_STATUS_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Status.conf")"
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH" "$__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH" "This global variable stores the path of the"
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH" "$__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Status.conf » configuration file";
 
 # Bash Utils text variables configuration file.
 __BU_MAIN_MODULE_CONF_TEXT_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Text.conf")"
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" "This global variable stores the path of the "
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Text.conf » configuration file";
 
 # Bash Utils time variables configuration file.
 __BU_MAIN_MODULE_CONF_TIME_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Time.conf")"
-BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_TIME_FILE_PATH" "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH" "This global variable stores the path of the "
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_TIME_FILE_PATH" "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Time.conf » configuration file";
 
 # -----------------------------------------------
 
@@ -190,13 +190,15 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_CONF_TIME_FILE_PATH
 
 # Module's initializer file.
 __BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MODULE_UTILS_MODULES_DIR" "Initializer.sh")"
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH" "$__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH" ""
 
 # -----------------------------------------------
 
 ## "functions" FOLDER'S SUB-FOLDERS CONTENT.
 
-# 
+# Main module's library functions folder's path.
 __BU_MAIN_MODULE_FUNCTIONS_FILES_PATH=("$__BU_MAIN_MODULE_LIB_MOD_DIR_PATH/"*.lib)
+BU::ModuleInit::DisplayInitGlobalVarsInfos "__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH" "$__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH" ""
 
 # -----------------------------------------------
 
